# ml-lito

./: .dockerignore  .gitignore  .pre-commit-config.yaml  ACKNOWLEDGEMENTS  Dockerfile  LICENSE  LICENSE_MODEL  README.md  exclude.txt  pyproject.toml  run_ruff.sh
configs/: default_config.yaml
configs/lito/generator/: lito_dit_8k32.yaml
configs/lito/tokenizer/: lito_8k32.yaml
demos/lito/: fastapi_lito_demo.py
demos/lito/templates/: index_lito.html
docker/: BUILD_POD_TODO.md  build.sh  entrypoint.sh  prefetch_assets.py  smoke_test.py  test.sh
docs/: docker.md  index.html  repo-structure.md  runpod.md
env/: setup.sh  setup_mac.sh
env/scripts/: backoff.sh  compile_cuda_packages.sh  setup_cyobj.sh  setup_gaussians.sh  setup_spz.sh  setup_trellis.sh
libraries/blender_rendering/: README.md  pyproject.toml
libraries/blender_rendering/assets/: boom_karts_rocket_vehicle.glb  bunny.glb  credit.txt  dandys_world_goob_rig__animation.glb
libraries/blender_rendering/examples/: example_config.json  example_config.yaml  test_blender_rendering.ipynb
libraries/blender_rendering/src/blender_rendering/: blender_open3d_utils.py  blender_plib_utils.py  blender_utils.py  blender_utils_v2.py  blender_utils_v3.py  utils.py
libraries/blender_rendering/tests/: test_render_save_and_load.ipynb
libraries/plibs/: .gitignore  README.md  pyproject.toml
libraries/plibs/src/plibs/: byte_dict_utils.py  cam_utils.py  data_utils.py  exr_utils.py  gs_utils.py  img_utils.py  json_utils.py  lightning_utils.py  linalg_utils.py  mask_utils.py  mesh_utils.py  o3d_utils.py  p3d_utils.py  pcd_metric_utils.py  pointersect_metric_utils.py  ppoint.py  pr_utils.py  print_utils.py  render.py  rigid_motion.py  sample_utils.py  sh_utils.py  structures.py  torch_numerical.py  utils.py  uv_mapping.py  video_utils.py  vis_utils.py  wds_utils.py  xformers_utils.py
libraries/plibs/tests/: __init__.py  test_ppoint.py
libraries/plibs/tests/data_utils/: test_render_multi_mesh_sample.ipynb
notebooks/: demo_tokenizer.ipynb  render_data.ipynb
scripts/: train.py
src/lito/configs/: lito.yaml
src/lito/datasets/: base.py  obj_wdset.py
src/lito/eval_scripts/: eval_utils_metrics.py  st_model_utils.py  st_paper_utils.py
src/lito/flow/: path.py
src/lito/integrations/trellis/: __init__.py  trellis_sparse_structure.py  trellis_utils.py
src/lito/integrations/trellis/representations/mesh/: cube2mesh.py  utils_cube.py
src/lito/mlx/: convert.py  convert_gaussian_decoder.py
src/lito/mlx/flow/: __init__.py  path.py
src/lito/mlx/models/: dit.py  gaussian_decoder.py  layers.py
src/lito/mlx/odelibs/: ode_solvers.py
src/lito/models/: dino.py  dit.py  ema.py  layers.py  linear.py  nn_utils.py  perceiver_encoder.py  point_decoder.py  point_encoder.py  pointnet_utils.py  resnet.py  spoint_encoder.py  struct_attn.py  vector_decoder.py
src/lito/odelibs/: ode_solvers.py
src/lito/preprocess_scripts/: tar_utils.py
src/lito/script_utils/: config_utils.py  lr_scheduler.py  pl_utils.py
src/lito/trainers/: __init__.py  base.py  lito_dit_trainer.py  lito_trainer.py
