[project]
name = "blender_rendering"
version = "0.0.1"
authors = []
description = ""
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
"Homepage" = "https://github.pie.apple.com/mlr-experimental/blender_rendering"
"Bug Tracker" = "https://github.pie.apple.com/mlr-experimental/blender_rendering/issues"


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false


[tool.ruff]
line-length = 120
target-version = "py310"  # Target Python version
lint.select = [
    "E",  # pycodestyle errors.
    "F",  # Pyflakes rules.
    "I",  # isort formatting.
    "PLC",  # Pylint convention warnings.
    "PLE",  # Pylint errors.
    "PLR",  # Pylint refactor recommendations.
    "PLW",  # Pylint warnings.
    "NPY201" # NumPY 2.0 migration https://numpy.org/devdocs/numpy_2_0_migration_guide.html#ruff-plugin
]
lint.ignore = [
    "E501",  # Line too long.
    "F722",  # Forward annotation false positive from jaxtyping. Should be caught by pyright.
    "F821",  # Forward annotation false positive from jaxtyping. Should be caught by pyright.
    "PLR2004",  # Magic value used in comparison.
    "PLR0915",  # Too many statements.
    "PLR0913",  # Too many arguments.
    "PLC0414",  # Import alias does not rename variable. (this is used for exporting names)
    "PLC1901",  # Use falsey strings.
    "PLR5501",  # Use `elif` instead of `else if`.
    "PLR0911",  # Too many return statements.
    "PLR0912",  # Too many branches.
    "PLW0603",  # Globa statement updates are discouraged.
    "PLW2901",  # For loop variable overwritten.
    "PLR1730",  # Replace if statement with min/max
    "PLC0206",  # No need to always use items for dict
]
exclude = ["third_party/"]

[tool.ruff.format]
quote-style = "double"
line-ending = "lf"  # Use LF for all platforms

[tool.ruff.lint.isort]
combine-as-imports = true
from-first = false
force-sort-within-sections = true
split-on-trailing-comma = false
# known-first-party = ["plibs", "blender_rendering"]
known-first-party = ["blender_rendering"]
known-local-folder = ["*.py", "plibs", "blender_rendering", "bolt", "configs", "datasets", "eval_scripts", "flow", "models", "notebooks", "odelibs", "plot_scripts", "preprocess_scripts", "script_utils", "tests", "trainers", "third_party"]
section-order = ["future", "standard-library", "third-party", "torch", "apple", "first-party", "local-folder"]

[tool.ruff.lint.isort.sections]
"torch" = ["torch", "torchvision", "pytorch3d"]
"apple" = ["turibolt", "parabolt", "apple_fsspec", "dask_bolt"]